--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:3.2.1"
 
+        // 第一 TinkerPatch 插件
+        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.2.14.7"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
