--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.2.1"
+        classpath 'com.android.tools.build:gradle:4.0.0'
+
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
 
         // 第一 TinkerPatch 插件
         classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.2.14.7"
