--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         //MultiDex分包方法
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -38,6 +38,7 @@ android {
     buildTypes {
         debug{
             buildConfigField("boolean","LOG_DEBUG","true")
+            buildConfigField("String","URL","\"http://baobab.kaiyanapp.com/api/\"")
             signingConfig signingConfigs.debug
             minifyEnabled false
             shrinkResources false
@@ -48,10 +49,20 @@ android {
 
 
         release {
+            buildConfigField("boolean","LOG_DEBUG","false")
+            buildConfigField("String", "URL", "\"https://www.niaogebiji.com/\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    //② butterknife需要1.8
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+
 
 
     dexOptions{
@@ -73,4 +84,17 @@ dependencies {
     implementation("com.tinkerpatch.sdk:tinkerpatch-android-sdk:1.2.14.7"){ changing = true }
     //分包
     implementation 'androidx.multidex:multidex:2.0.1'
+    //retrofit
+    implementation 'com.squareup.okhttp3:okhttp:3.14.4'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.4'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    //管理生命周期
+    implementation 'com.uber.autodispose:autodispose-android:0.8.0'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.8.0'
+
+    implementation project(path: ':common_lib')
 }
