--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha04'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -97,4 +99,19 @@ dependencies {
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.8.0'
 
     implementation project(path: ':common_lib')
+    //supertextview
+//    implementation 'com.github.lygttpod:SuperTextView:2.4.2'
+
+    compile 'com.facebook.fbui.textlayoutbuilder:textlayoutbuilder:1.5.0'
+
+    //textview 修正文本偏差
+//    implementation 'com.github.bluejamesbond:textjustify-android:2.1.6'
+
+    //保证textView完全显示
+    compile 'me.grantland:autofittextview:0.2.+'
+
+    //textview 字体库 设置系统字体粗细
+    implementation 'com.vstechlab.easyfonts:easyfonts:1.0.0'
+    //带图片的textview
+    compile 'com.github.aakira:compound-icon-textview:1.2.1@aar'
 }
